lets try the marketplace suggestions in https://github.com/umbraco/Umbraco.Marketplace.Issues/issues/41

--- a/UmbracoOutputCache.csproj
+++ b/UmbracoOutputCache.csproj
@@ -5,6 +5,7 @@
     <ContentTargetFolders>.</ContentTargetFolders>
     <Product>UmbracoOutputCache</Product>
     <PackageId>UmbracoOutputCache</PackageId>
+	<PackageProjectUrl>https://github.com/prmeyn/UmbracoOutputCache/</PackageProjectUrl>
     <Description>
 		This package caches all your server side code like the output of your razor templates so that it is not excecuted over and over again as you get more concurrent visitors but will be cached for the duration you set, by default this package sets it to 10 seconds.
 		This should help improve the performance of your Umbraco server bringing down CPU utilization etc.
